fixed the design

--- a/YouTubeApi/Views/Home/Index.cshtml
+++ b/YouTubeApi/Views/Home/Index.cshtml
@@ -92,7 +92,7 @@
         <input type="text" name="channelId" placeholder="Введите Channel ID" value="@Context.Request.Query["channelId"]" class="input-field" />
         <button type="submit" class="yt-button">Показать</button>
     </form>
-    <a href="/" class="btn-show-all" style="align-self: flex-start;">Показать все видео</a>
+    @* <a href="/" class="btn-show-all" style="align-self: flex-start;">Показать все видео</a> *@
 </div>
 
 
