--- a/YouTubeApi/Views/Home/Search.cshtml
+++ b/YouTubeApi/Views/Home/Search.cshtml
@@ -183,11 +183,12 @@ td img {
 <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css" />
 <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
 <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 <script>
     $(document).ready(function () {
         $('#videoTable').DataTable({
             language: {
-                search: "🔍 Поиск:",
+                search: '<i class="fas fa-search"></i> Поиск:',
                 lengthMenu: "Показать _MENU_ видео",
                 info: "Показано _START_–_END_ из _TOTAL_ видео",
                 paginate: {
